8289771: jpackage: ResourceEditor error when path is overly long on Windows