test/jdk/tools/jpackage/helpers/jdk/jpackage/test/Executor.java
@@ -53,7 +53,7 @@ public final class Executor extends CommandArguments<Executor> {
 
     public Executor() {
         saveOutputType = new HashSet<>(Set.of(SaveOutputType.NONE));
-        removePath = false;
+        removePathEnvVar = false;
     }
 
     public Executor setExecutable(String v) {
@@ -85,8 +85,8 @@ public final class Executor extends CommandArguments<Executor> {
         return setExecutable(v.getPath());
     }
 
-    public Executor setRemovePath(boolean value) {
-        removePath = value;
+    public Executor setRemovePathEnvVar(boolean value) {
+        removePathEnvVar = value;
         return this;
     }
 
@@ -348,7 +348,7 @@ public final class Executor extends CommandArguments<Executor> {
             builder.directory(directory.toFile());
             sb.append(String.format("; in directory [%s]", directory));
         }
-        if (removePath) {
+        if (removePathEnvVar) {
             // run this with cleared Path in Environment
             TKit.trace("Clearing PATH in environment");
             builder.environment().remove("PATH");
@@ -478,7 +478,7 @@ public final class Executor extends CommandArguments<Executor> {
     private Path executable;
     private Set<SaveOutputType> saveOutputType;
     private Path directory;
-    private boolean removePath;
+    private boolean removePathEnvVar;
     private String winTmpDir = null;
 
     private static enum SaveOutputType {
